fix: prevent clipping of items in sub-task container in TaskEditForm

--- a/src/app/main-pages/board/task/task-dialog/task-edit-form/task-edit-form.component.scss
+++ b/src/app/main-pages/board/task/task-dialog/task-edit-form/task-edit-form.component.scss
@@ -350,7 +350,7 @@
 }
 
 .subtasks-edit-list {
-  @include dFlex($fd: column, $g: 8px);
+  @include dFlex($fd: column, $g: 8px, $jc: flex-start);
   max-height: 250px;
   overflow-y: auto;
   width: 100%;
